--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-maps": "^0.23.0"
+    "react-native-google-places-autocomplete": "^1.3.9",
+    "react-native-maps": "^0.23.0",
+    "react-native-maps-directions": "^1.6.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
